--- a/RC23_test_run_PC.css
+++ b/RC23_test_run_PC.css
@@ -15,7 +15,7 @@
     cursor: pointer;
     
     position: absolute;
-    top: %;
+    top: 247.25px;
     left: 20%;
     -ms-transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
