--- a/RC23_test_run_PC.css
+++ b/RC23_test_run_PC.css
@@ -16,7 +16,7 @@
     
     position: absolute;
     top: 247.25px;
-    left: 20%;
+    left: 249.41885px;
     -ms-transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
