--- a/RC23_test_run_PC.css
+++ b/RC23_test_run_PC.css
@@ -937,3 +937,14 @@
 .Bridge input{
     display: none;
 }
+
+.timeput {
+    position: absolute;
+    top: 3.0%;
+    left: 80.0%;
+    /* -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    margin:0;
+    padding:0; */
+}
